--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,10 +7,27 @@ body
     margin: 0;
     padding: 0;
 }
+
+#cabezera
+{
+    background-color: green ;
+    color: honeydew;
+    margin: 0;
+    padding: 0.5em;    
+    font-weight: bold;
+}
+
+#cabezera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container
+
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -20,3 +37,7 @@ body
 {
     font-size: 20px;
 }
+#post
+{
+    padding: 1em;
+}    
