--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {   
     color: rgb(41, 136, 46);
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: cursive;
     font-size: 16px;
     margin: 0;
     padding: 0;
